<package>
  <name>distance_field</name>
  <version>1.0.0</version>
  <description>This package contains algorithms that can compute the
Euclidean Distance Transform (EDT) of a 3-D voxel grid. The input to these algorithms is
an array of points (which could represent the positions of obstacles in the world). 
The EDT provides a voxel grid in which in which each cell contains the distance to the
closest obstacle. The VoxelGrid class can also be used as a generic, templatized container for a discretized 3-D voxel grid.</description>
  <maintainer email="mail@mrinal.net">Mrinal Kalakrishnan </maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/distance_field</url>
  <!-- <url type="bugtracker"></url> -->

  <author email="mail@mrinal.net">Mrinal Kalakrishnan </author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>visualization_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>geometric_shapes</build_depend>
  <build_depend>rosconsole</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>visualization_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>geometric_shapes</run_depend>
  <run_depend>rosconsole</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>visualization_msgs</test_depend> -->
  <!-- <test_depend>moveit_msgs</test_depend> -->
  <!-- <test_depend>geometric_shapes</test_depend> -->
  <!-- <test_depend>rosconsole</test_depend> -->

<export>
    <cpp lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -ldistance_field" cflags="-I${prefix}/include"/>
</export>

</package>
